# state_interpreter

./: CMakeLists.txt  package.xml  state_img_files.yaml
include/: state_interpreter.hpp
launch/: state_interpreter.launch
sample_dataset/: README.md  display_conf.yaml
src/: state_interpreter.cpp  state_interpreter_node.cpp
