<?xml version="1.0"?>
<package format="2">
  <name>state_interpreter</name>
  <version>0.0.0</version>
  <description>The state_interpreter package</description>

  <maintainer email="yuma.nihei@tier4.jp">yn</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>autoware_build_flags</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sound_play</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>autoware_config_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
